--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -10,13 +10,25 @@
 <ul>
     <li th:each="album : ${albumsList}">
 
-
-        <span th:text="${album.title}"></span>
-
+        <p th:text="${album.title}"></p>
+        <p th:text="${album.artist}"></p>
+        <p th:text="${album.songCount}"></p>
+        <p th:text="${album.length}"></p>
         <img th:src="${album.imageUrl}" alt="">
 
     </li>
 </ul>
 
+
+<form action="/albums" method="POST">
+
+    <h2>Add New Album</h2>
+    Title: <input type="text" name="title">
+    Artist: <input type="text" name="artist">
+    Song Count: <input type="number" name="songCount">
+    Length: <input type="number" name="length">
+    Image URL: <input type="text" name="imageUrl">
+    <input type="submit">
+</form>
 </body>
 </html>
